--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "marked": "^1.1.1",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
